--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,6 +63,19 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <!--<error-page>-->
+        <!--<error-code>400</error-code>-->
+        <!--<location>/WEB-INF/templates/errorPage/400.html</location>-->
+    <!--</error-page>-->
+    <!--<error-page>-->
+        <!--<error-code>404</error-code>-->
+        <!--<location>/WEB-INF/templates/errorPage/404.html</location>-->
+    <!--</error-page>-->
+    <!--<error-page>-->
+        <!--<error-code>500</error-code>-->
+        <!--<location>/WEB-INF/templates/errorPage/500.html</location>-->
+    <!--</error-page>-->
+
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>ssl</web-resource-name>
