--- a/src/main/resource/machine.properties
+++ b/src/main/resource/machine.properties
@@ -9,13 +9,9 @@ dbcp.maxWait=5
 dbcp.maxOpenPreparedStatements=1000
 # == MySQL ==
 mysql.driver=com.mysql.jdbc.Driver
-#mysql.url=jdbc:mysql://192.168.1.103:3306/admachine?useUnicode=true&characterEncoding=UTF-8
-#mysql.user=XMLAN
-#mysql.pass=Zhxm2512209
-
-mysql.url=jdbc:mysql://localhost:3306/admachine?useUnicode=true&characterEncoding=UTF-8
-mysql.user=root
-mysql.pass=root
+mysql.url=jdbc:mysql://192.168.1.103:3306/admachine?useUnicode=true&characterEncoding=UTF-8
+mysql.user=XMLAN
+mysql.pass=Zhxm2512209
 # == SQL Server ==
 #mssql.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #mssql.url=
