playable video and image

--- a/src/main/resource/machine.properties
+++ b/src/main/resource/machine.properties
@@ -25,6 +25,10 @@ adminPath=/mng
 # !WARNING! - CANNOT be ended with '/', it must be ended with a port number, or just IP address!
 apacheServer=http://127.0.0.1
 imagePath=/Users/ayakurayuki/Documents/WebServer/Documents/images
+imageTag=images
 videoPath=/Users/ayakurayuki/Documents/WebServer/Documents/videos
+videoTag=videos
 # == page size config ==
 pageSize=5
+# == machine URL header ==
+machine=/machine
