--- a/src/main/resource/machine.properties
+++ b/src/main/resource/machine.properties
@@ -21,6 +21,7 @@ mysql.pass=Zhxm2512209
 # System Configuration #
 # == Management page request URL header ==
 adminPath=/mng
+servicePath=/serve
 # == Apache image storage server configuration, please keep it the same with httpd.conf ==
 # !WARNING! - CANNOT be ended with '/', it must be ended with a port number, or just IP address!
 apacheServer=http://127.0.0.1
