--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <mybatis.version>3.4.4</mybatis.version>
         <mybatis-spring.version>1.3.1</mybatis-spring.version>
         <log4j2.version>2.8.2</log4j2.version>
-        <slf4j.version>1.6.4</slf4j.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <taglib.version>1.2.5</taglib.version>
         <jackson.version>2.7.4</jackson.version>
         <shiro.version>1.3.2</shiro.version>
@@ -395,6 +395,20 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.3</version>
+        </dependency>
+        <!-- </editor-fold> -->
+
+        <!-- <editor-fold desc="极光推送"> -->
+        <dependency>
+            <groupId>cn.jpush.api</groupId>
+            <artifactId>jpush-client</artifactId>
+            <version>3.3.3</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- </editor-fold> -->
 
