--- a/src/main/resource/machine.properties
+++ b/src/main/resource/machine.properties
@@ -33,3 +33,6 @@ videoTag=videos
 pageSize=5
 # == machine URL header ==
 machine=/machine
+# == JPush ==
+masterSecret=a11d1ed859a4124734842c67
+appKey=de9981d519e4e8a926611213
