--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,7 +69,7 @@
 
     <error-page>
         <error-code>400</error-code>
-        <location>/WEB-INF/templates/errorPage/400.html</location>
+        <location>/400</location>
     </error-page>
     <error-page>
         <error-code>404</error-code>
@@ -77,7 +77,7 @@
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/WEB-INF/templates/errorPage/500.html</location>
+        <location>/500</location>
     </error-page>
 
     <security-constraint>
