去除requirements.txt，改用properties存储requirements

--- a/src/main/resource/machine.properties
+++ b/src/main/resource/machine.properties
@@ -36,3 +36,5 @@ machine=/machine
 # == JPush ==
 masterSecret=a11d1ed859a4124734842c67
 appKey=de9981d519e4e8a926611213
+# == requirements ==
+python.requirements=pillow,pytoml
