日志功能附加

--- a/src/main/resource/machine.properties
+++ b/src/main/resource/machine.properties
@@ -1,13 +1,13 @@
 # DataSource Configuration #
 jdbcType=mysql
-# == DBCP ==
+# == DBCP数据库连接池配置 ==
 dbcp.initialSize=5
 dbcp.maxActive=30
 dbcp.maxIdle=25
 dbcp.minIdle=5
 dbcp.maxWait=5
 dbcp.maxOpenPreparedStatements=1000
-# == MySQL ==
+# == MySQL数据库连接参数 ==
 mysql.driver=com.mysql.jdbc.Driver
 mysql.url=jdbc:mysql://192.168.2.103:3306/admachine?useUnicode=true&characterEncoding=UTF-8
 mysql.user=XMLAN
@@ -19,7 +19,7 @@ mysql.pass=Zhxm2512209
 #mssql.pass=
 # =============================== #
 # System Configuration #
-# == Management page request URL header ==
+# == Request base URL ==
 adminPath=/mng
 servicePath=/serv
 mobilePath=/mob
@@ -33,7 +33,7 @@ videoTag=videos
 pageSize=5
 # == machine URL header ==
 machine=/machine
-# == JPush ==
+# == JPush，不要修改 ==
 masterSecret=a11d1ed859a4124734842c67
 appKey=de9981d519e4e8a926611213
 # == requirements ==
