新增activeMq消息分发订阅系统配置；新增展示test账号相关设置

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,26 @@
         </dependency>
         <!-- </editor-fold> -->
 
+
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>0.8.2.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka_2.11</artifactId>
+                <version>0.8.2.1</version>
+            </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.15.3</version>
+        </dependency>
+
         <!-- <editor-fold desc="Spring"> -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -426,6 +446,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>apache-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
         </dependency>
         <!-- </editor-fold> -->
 
