--- a/pom.xml
+++ b/pom.xml
@@ -74,41 +74,31 @@
             </dependency>
 
         <!--外部第三方的包-->
-        <dependency>
-            <groupId>gson-2.2.4</groupId>
-            <artifactId>admachine-gson-2.24</artifactId>
-            <version>2.2.4</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/webapp/libs/gson-2.2.4.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>okhttp-2.4.0</groupId>
-            <artifactId>admachine-gson-2.4.0</artifactId>
-            <version>2.24</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/webapp/libs/okhttp-2.4.0.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>okhttp-2.5.0</groupId>
-            <artifactId>admachine-okhttp-2.5.0</artifactId>
-            <version>2.5.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/webapp/libs/okhttp-2.5.0.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>okio-1.4.0</groupId>
-            <artifactId>admachine-okio-1.4.0</artifactId>
-            <version>1.4.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/webapp/libs/okio-1.4.0.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>okio-1.6.0</groupId>
-            <artifactId>admachine-okio-1.6.0</artifactId>
-            <version>1.6.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/webapp/libs/okio-1.6.0.jar</systemPath>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>gson-2.2.4</groupId>-->
+            <!--<artifactId>admachine-gson-2.2.4</artifactId>-->
+            <!--<version>2.2.4.RELEASE</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>okhttp-2.4.0</groupId>-->
+            <!--<artifactId>admachine-okhttp-2.4.0</artifactId>-->
+            <!--<version>2.2.4.RELEASE</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>okhttp-2.5.0</groupId>-->
+            <!--<artifactId>admachine-okhttp-2.5.0</artifactId>-->
+            <!--<version>2.5.0.RELEASE</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>okio-1.4.0</groupId>-->
+            <!--<artifactId>admachine-okio-1.4.0</artifactId>-->
+            <!--<version>1.4.0.RELEASE</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>okio-1.6.0</groupId>-->
+            <!--<artifactId>admachine-okio-1.6.0</artifactId>-->
+            <!--<version>1.6.0.RELEASE</version>-->
+        <!--</dependency>-->
 
 
         <dependency>
